<resources>
    <string name="app_name">Fruit Shop</string>
    <string name="app_version">V 1.0.0</string>
    <string name="app_copy">@ Menuka 2023</string>
    <string name="search">search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="login_title">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="register_title">REGISTER</string>
    <string name="mobile">Mobile</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="web_client_id">827074143297-vekv40msdmffbpjf21p49lf4cui1psop.apps.googleusercontent.com</string>
    <string name="login_with_google">Login With Google</string>
    <string name="product_details">PRODUCT DETAILS</string>
    <string name="product_name">Product Name</string>
    <string name="description">Description</string>
    <string name="related_items">Related Items</string>
    <string name="qty">qty</string>
    <string name="products_in_stock">Products In Stock</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="category">Category</string>
    <string name="checkout">CHECKOUT</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="continue_btn">Continue</string>
    <string name="address">Address</string>
    <string name="total_amount">Total Amount</string>
    <string name="rs_00_00">Rs.00.00</string>
    <string name="confirm">Confirm</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="select_delivery_location">Select delivery Location</string>
    <string name="purchase_history">Purchase History</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="buy_now_title">BUY NOW</string>
    <string name="products_title">PRODUCTS</string>
    <string name="buy_now">Buy Now</string>
    <string name="_1">1</string>
    <string name="my_cart">My Cart</string>
    <string name="empty">EMPTY</string>
    <string name="add_to_checkout">Add to Checkout</string>
    <string name="my_orders">My Orders</string>
    <string name="update_profile">Update Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="my_profile">My Profile</string>
    <string name="status">status</string>
    <string name="date">Date</string>
    <string name="id">id</string>

</resources>