<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/sideNavGroupMain">
        <item
            android:id="@+id/sideNavHome"
            android:icon="@drawable/home_fill_icon"
            android:title="@string/home"
            android:checked="true"/>
        <item
            android:id="@+id/sideNavWishlist"
            android:icon="@drawable/heart_fill_icon"
            android:title="@string/wishlist"
            android:visible="true" />
        <item
            android:id="@+id/sideNavCart"
            android:icon="@drawable/cart_shopping_icon"
            android:title="@string/cart"
            android:visible="true" />
        <item
            android:id="@+id/sideNavOrders"
            android:icon="@drawable/order_icon"
            android:title="@string/purchase_history"
            android:visible="true" />
        <item
            android:id="@+id/sideNavProfile"
            android:icon="@drawable/profile_fill_icon"
            android:title="@string/profile"
            android:visible="true" />
    </group>

    <group android:id="@+id/sideNavGroupAuth">
        <item
            android:id="@+id/sideNavLogout"
            android:icon="@drawable/logout_icon"
            android:title="@string/logout"
            android:visible="true" />
    </group>
</menu>