<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/orange_icon" />

                <TextView
                    android:id="@+id/registerTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/register_title"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logo" />

                <ImageButton
                    android:id="@+id/googleBtn1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/circle"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginBtn1"
                    app:srcCompat="@drawable/googleg_standard_color_18" />

                <EditText
                    android:id="@+id/editTextEmail1"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/text_edit"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/editTextLName"
                    app:layout_constraintStart_toStartOf="@+id/textViewEmail1"
                    app:layout_constraintTop_toBottomOf="@+id/textViewEmail1" />

                <TextView
                    android:id="@+id/textViewEmail1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/email"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/editTextLName"
                    app:layout_constraintTop_toBottomOf="@+id/editTextLName" />

                <TextView
                    android:id="@+id/textViewFName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/first_name"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/registerTitle" />

                <TextView
                    android:id="@+id/textViewLName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:nestedScrollingEnabled="true"
                    android:text="@string/last_name"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/editTextFName"
                    app:layout_constraintTop_toBottomOf="@+id/editTextFName" />

                <TextView
                    android:id="@+id/textViewPassword1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/password"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/editTextMobile"
                    app:layout_constraintTop_toBottomOf="@+id/editTextMobile" />

                <TextView
                    android:id="@+id/textViewMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/mobile"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/editTextEmail1"
                    app:layout_constraintTop_toBottomOf="@+id/editTextEmail1" />

                <EditText
                    android:id="@+id/editTextFName"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/text_edit"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textViewFName"
                    app:layout_constraintTop_toBottomOf="@+id/textViewFName" />

                <EditText
                    android:id="@+id/editTextLName"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/text_edit"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/editTextFName"
                    app:layout_constraintStart_toStartOf="@+id/textViewLName"
                    app:layout_constraintTop_toBottomOf="@+id/textViewLName" />

                <EditText
                    android:id="@+id/editTextMobile"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/text_edit"
                    android:ems="10"
                    android:hint="@string/mobile"
                    android:inputType="numberDecimal"
                    android:paddingStart="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/editTextEmail1"
                    app:layout_constraintStart_toStartOf="@+id/textViewMobile"
                    app:layout_constraintTop_toBottomOf="@+id/textViewMobile" />

                <EditText
                    android:id="@+id/editTextPassword1"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/text_edit"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/editTextMobile"
                    app:layout_constraintStart_toStartOf="@+id/textViewPassword1"
                    app:layout_constraintTop_toBottomOf="@+id/textViewPassword1" />

                <Button
                    android:id="@+id/registerBtn1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/register"
                    app:layout_constraintEnd_toEndOf="@+id/editTextPassword1"
                    app:layout_constraintStart_toStartOf="@+id/editTextPassword1"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPassword1" />

                <Button
                    android:id="@+id/loginBtn1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    app:layout_constraintEnd_toEndOf="@+id/registerBtn1"
                    app:layout_constraintStart_toStartOf="@+id/registerBtn1"
                    app:layout_constraintTop_toBottomOf="@+id/registerBtn1" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>